# cpp_include_problem

./: CMakeLists.txt  main.cpp
a/public/: common.h
b/public/: common.h
